Adicionando exemplos js e comentando code do projeto.

--- a/projeto-portfolio/index.html
+++ b/projeto-portfolio/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Importando fontes para o projeto -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"/>
 
+    <!-- Importando css externo -->
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/rolagem.css" />
 
@@ -21,12 +20,16 @@
   <body>
 
     <main class="cartao">
+
+      <!-- =============================================== INFORMAÇÕES ================================== -->
       <div class="minhas-informacoes">
         <img src="./imagens/bruno.png" alt="foto de perfil" />
         <h1 class="nome">Bruno Lima</h1>
         <h2 class="cargo">Estudante de desenvolvimento web</h2>
       </div>
 
+
+      <!-- ============================================== ITENS ========================================= -->
       <div class="conteudo">
         <ul class="abas">
           <li class="aba selecionada" id="sobre-mim">
@@ -41,9 +44,12 @@
         </ul>
 
         <div class="informacoes-abas">
+
+          <!-- =============================================== SEÇÃO SOBRE ===================================== -->
+
           <div class="informacao selecionado" id="informacao-sobre-mim">
             <h3 class="sub-titulo">Sobre mim</h3>
-
+            
             <div class="descricao">
               <p>
                 Olá! meu nome é Bruno Lima, seja bem-vindo(a)! Sou de Pedro II Piauí e estou buscando me profissionalizar na área de frontend. Sou graduando em Análise e Desenvolvimento de Sistemas no IFPI Campus Pedro II e estou dedicado em aprender as tecnologias de <span>HTML, CSS, JavaScript e frameworks populares</span>. Meu objetivo é criar interfaces interativas e proporcionar ótimas experiências aos usuários. Estou determinado a me aprimorar continuamente e construir uma carreira promissora como desenvolvedor frontend.
@@ -51,6 +57,7 @@
             </div>
           </div>
 
+          <!-- =============================================== SEÇÃO REDES SOCIAIS ===================================== -->
           <div class="informacao" id="informacao-minhas-redes">
             <h3 class="sub-titulo">Minhas redes sociais</h3>
 
@@ -81,6 +88,9 @@
               </li>
             </ul>
           </div>
+
+
+          <!-- =============================================== SEÇÃO PROJETOS ===================================== -->
 
           <div class="informacao" id="informacao-meus-projetos">
             <h3 class="sub-titulo">Meus Projetos</h3>
