Adicionando exemplos JS e Slide atualizado.

--- a/exercicios/js/Ex-ManipulandoElementos.html
+++ b/exercicios/js/Ex-ManipulandoElementos.html
@@ -8,7 +8,7 @@
     <h1>Portfolio</h1>
     <hr>
 
-    <img src="https://avatars.githubusercontent.com/u/125039158?v=4">
+    <img class="perfil" src="https://avatars.githubusercontent.com/u/125039158?v=4">
     
     <h2>Nome:</h2>
     <p>Bruno Lima Pinheiro</p>
